@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-27
+2015-03-09 Mikhail S. Dubrovin	
+- AndorBaseV1 - set Rows=512, Cols=512 for SxrEndstation.0:Andor.1/2 in sxrg3715-r0046, use cmod pars 2,10,10,Cols (PSAS-121)
+	
 Tag: V00-05-26
 2015-01-13 Mikhail S. Dubrovin	
 - NDArrIOV1 - add print_bits parameter in static method save_ndarray (PSAS-44)
